fixed the eventCard gaps and inline text, fixed the audiences buttons in the search page

--- a/src/components/EventCard/style.module.css
+++ b/src/components/EventCard/style.module.css
@@ -66,6 +66,11 @@
   gap: 1%;
 }
 
+.location>p{
+  margin: 0;
+  text-align: center;
+}
+
 .time {
   display: flex;
   flex-direction: column;
